# SeparationExtraction

./: CMakeLists.txt  README.md
dataset/: bnoise.ply  bnoise_streamline.vtk  bnoise_streamline_point.vtk  bruno3.ply  bruno3_streamline.vtk  cnoise.ply  cnoise_streamline.vtk  dipole.ply  vnoise.ply  vnoise_streamline.vtk
src/Common/: CMakeLists.txt  DataSet.cpp  DataSet.h  DetermClusterNum.cpp  DetermClusterNum.h  Initialization.cpp  Initialization.h  ReadData.cpp  ReadData.h  SimilarityDistance.cpp  SimilarityDistance.h  VTKWritter.cpp  VTKWritter.h  Visualization.cpp  Visualization.h
src/LocalScalar/: LocalScalar.cpp  LocalScalar.h  SuperpointGeneration.cpp  SuperpointGeneration.h  main.cpp
src/ParallelVector/: ParallelVector.cpp  ParallelVector.h  main.cpp
src/SeparationExtraction/: SeparationExtraction.cpp  SeparationExtraction.h  main.cpp
src/StreamlineClustering/: AHC.cpp  AHC.h  Evrot.cpp  Evrot.h  LineClustering.cpp  LineClustering.h  SpectralClustering.cpp  SpectralClustering.h  main.cpp
src/StreamlineGenerator/: main.cpp
